--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,4 @@
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
-COPY target/*.jar app.jar
-EXPOSE 8080
+COPY target/api-gateway-1.0.0.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
