--- a/k8s/user-service.yaml
+++ b/k8s/user-service.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: user-service
-          image: vaibhav8855/user-service:latest
+          image: vaibhav126/user-service:1.0
           ports:
             - containerPort: 8080
 ---
